[package]
name = "gents"
version = "0.0.0"
edition = "2021"
license = "MIT or Apache-2.0"
description = "generator based on JSON Schema"

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_yaml = "0.8"
serde_json = "1.0.79"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
snafu = "0.7.0"
once_cell = "1.10"
regex = "1.5.5"
rayon = "1.5.2"
dashmap = { version = "5.2.0", features = ["rayon", "send_guard"] }
petgraph = "0.6.0"
tera = "1.15.0"
